--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana Sayfa</title>
+    <title>Web Siteme Hoşgeldiniz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,17 +11,18 @@
         <nav>
             <ul>
                 <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="projects.html">Projelerim</a></li>
                 <li><a href="about.html">Hakkımda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
-        <h1>Hoş Geldiniz!</h1>
-        <p>Burası ana sayfa.</p>
-        <button onclick="window.location.href='about.html'">Hakkımda</button>
-        <button onclick="window.location.href='contact.html'">İletişim</button>
-    </section>
+    <main>
+        <div class="container">
+            <h1>Web Siteme Hoşgeldiniz!</h1>
+            <p>Burada projelerimi, hakkımda bilgileri ve iletişim detaylarımı bulabilirsiniz.</p>
+        </div>
+    </main>
 </body>
 </html>
