--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakkımda</title>
+    <title>Projelerim</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,9 +18,12 @@
         </nav>
     </header>
 
-    <section>
-        <h1>Hakkımda</h1>
-        <p>Benim hakkımda bazı bilgiler buraya gelecek.</p>
-    </section>
+    <main>
+        <div class="container">
+            <h1>Projelerim</h1>
+            <p>Projelerimi burada bulabilirsiniz.</p>
+            <!-- Proje yükleme alanı buraya eklenebilir -->
+        </div>
+    </main>
 </body>
 </html>
