--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="projects.html">Projelerim</a></li>
                 <li><a href="about.html">Hakkımda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
             </ul>
